<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/activeSession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="Session" />

            <TextView
                android:id="@+id/dateTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activeSession"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="Date" />

            <TextView
                android:id="@+id/subs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dateTxt"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="Subscription" />

            <CheckBox
                android:id="@+id/antiThief"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/subs"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/antiThiefTxt"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/subs"
                android:layout_toEndOf="@+id/antiThief"
                android:gravity="center|left"
                android:text="Anti Thief" />

            <Button
                android:id="@+id/showInfo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/antiThief"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="Show all Information" />

            <Button
                android:id="@+id/isMoved"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/showInfo"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:focusable="true"
                android:text="Anti Thief details"
                />

            <Button
                android:id="@+id/logOut"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/isMoved"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="log out" />

        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>