...
                        android:text="0.0" />

                </RelativeLayout>
            </LinearLayout>

            <Button
                android:id="@+id/viewMap"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="View Bike On Map" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
